--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,7 @@ android:
     - build-tools-21.1.1
     - android-21
     - extra
+    # Specify at least one system image,
+    # if you need to run emulator(s) during your tests
+    - sys-img-armeabi-v7a-android-21
+    - sys-img-x86-android-21
