--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: android
 android:
   components:
+    - platform-tools
+    - tools
     - build-tools-21.1.1
     - android-21
     - extra
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-21
-    - sys-img-x86-android-21
+
