--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,11 @@ android:
     - tools
     - build-tools-21.1.1
     - android-21
-    - extra
+     - ant debug
   # if you need to run emulator(s) during your tests
     - sys-img-armeabi-v7a-android-19
     - sys-img-x86-android-17
+    - extra
   before_install:
     - gem install fir-cli
   after_deploy:
