--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: android
+install: ant deps
 android:
   components:
     - platform-tools
     - tools
     - build-tools-21.1.1
     - android-21
-     - ant debug
+    - ant debug
   # if you need to run emulator(s) during your tests
     - sys-img-armeabi-v7a-android-19
     - sys-img-x86-android-17
