--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,11 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 21
     buildToolsVersion "22.0.0"
-
+	
+    lintOptions {
+          abortOnError false
+      }
+	  
     defaultConfig {
         applicationId "com.androlua"
         minSdkVersion 14
