--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest android:versionCode="310" android:versionName="3.1.160502" package="com.androlua" xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest android:versionCode="310" android:versionName="3.1.160506" package="com.androlua" xmlns:android="http://schemas.android.com/apk/res/android">
 	<uses-sdk android:minSdkVersion="14" android:targetSdkVersion="21"/>
 	<uses-permission android:name="android.permission.CALL_PHONE"/>
 	<uses-permission android:name="android.permission.SEND_SMS"/>
@@ -49,7 +49,9 @@
 			android:theme="@style/WelcomeTheme"
 			android:launchMode="singleInstance"
 			android:screenOrientation="portrait"
-			android:windowSoftInputMode="adjustResize" >
+			android:windowSoftInputMode="adjustResize" 
+			android:configChanges="orientation"
+			>
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 				<category android:name="android.intent.category.LAUNCHER"/>
@@ -76,7 +78,9 @@
 			android:name="com.androlua.LuaActivity"
 			android:theme="@android:style/Theme.Holo.Light.NoActionBar"
 			android:screenOrientation="portrait"
-			android:windowSoftInputMode="adjustResize" >
+			android:windowSoftInputMode="adjustResize"
+			android:configChanges='orientation'
+			>
 			<intent-filter >
 				<action  android:name = "android.intent.action.VIEW"  />
 				<category  android:name = "android.intent.category.DEFAULT"  />
