更新版本号

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest android:versionCode="310" android:versionName="3.1.160506" package="com.androlua" xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest android:versionCode="310" android:versionName="3.1.160523" package="com.androlua" xmlns:android="http://schemas.android.com/apk/res/android">
 	<uses-sdk android:minSdkVersion="14" android:targetSdkVersion="21"/>
 	<uses-permission android:name="android.permission.CALL_PHONE"/>
 	<uses-permission android:name="android.permission.SEND_SMS"/>
@@ -47,7 +47,7 @@
 		<activity 
 			android:name="com.androlua.Main"
 			android:theme="@style/WelcomeTheme"
-			android:launchMode="singleInstance"
+			android:launchMode="singleTask"
 			android:screenOrientation="portrait"
 			android:windowSoftInputMode="adjustResize" 
 			android:configChanges="orientation"
