--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest android:versionCode="322" android:versionName="3.2.2" package="com.androlua" xmlns:android="http://schemas.android.com/apk/res/android">
-	<uses-sdk android:minSdkVersion="14" android:targetSdkVersion="21"/>
+<manifest android:versionCode="325" android:versionName="3.2.5" package="com.androlua" xmlns:android="http://schemas.android.com/apk/res/android">
+	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="21"/>
 	<uses-permission android:name="android.permission.CALL_PHONE"/>
 	<uses-permission android:name="android.permission.SEND_SMS"/>
-	<uses-permission android:name="android.permission.INSTALL_PACKAGES"/>
+	
 	<uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 	<uses-permission android:name="android.permission.WRITE_CONTACTS"/>
 	<uses-permission android:name="android.permission.READ_CONTACTS"/>
@@ -16,20 +16,20 @@
 	<uses-permission android:name="android.permission.BATTERY_STATS"/>
 	<uses-permission android:name="android.permission.CLEAR_APP_CACHE"/>
 	<uses-permission android:name="android.permission.GET_PACKAGE_SIZE"/>
-	<uses-permission android:name="android.permission.WRITE_APN_SETTINGS"/>
+	
 	<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 	<uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 	<uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
 	<uses-permission android:name="android.permission.BLUETOOTH"/>
 	<uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.MODIFY_PHONE_STATE"/>
+	
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 	<uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT"/>
 	<uses-permission android:name="android.permission.VIBRATE"/>
-	<uses-permission android:name="android.permission.GET_TASKS"/>
+	
 	<uses-permission android:name="android.permission.READ_LOGS"/>
 	<uses-permission android:name="android.permission.WAKE_LOCK"/>
 	<uses-permission android:name="android.permission.READ_CALL_LOG"/>
@@ -37,7 +37,7 @@
 	<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 	<uses-permission android:name="android.permission.CAMERA"/>
 	<uses-permission android:name="android.permission.READ_FRAME_BUFFER" />
-	<uses-permission android:name="android.permission.PERSISTENT_ACTIVITY" />
+	
 	<uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
 	<uses-permission android:name="android.permission.SET_WALLPAPER" />
 	<application android:icon="@drawable/icon"
@@ -54,21 +54,22 @@
 			android:configChanges="orientation|screenSize|keyboardHidden"
 			>
 			<!--intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
-			android:hardwareAccelerated="false"
+			<action android:name="android.intent.action.MAIN"/>
 			<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter-->
 			<intent-filter >
 				<action  android:name = "android.intent.action.VIEW"  />
+				<action  android:name = "android.intent.action.EDIT"  />
 				<category  android:name = "android.intent.category.DEFAULT"  />
 				<category  android:name = "android.intent.category.BROWSABLE"  />
 				<data  android:scheme = "file"  />
-				<data  android:mimeType = "*/*"  />
+				<!--data  android:mimeType = "*/*"  /-->
 				<data  android:host = "*"  />
 				<data  android:pathPattern = ".*\\.alp"  />
 			</intent-filter >
 			<intent-filter >
 				<action  android:name = "android.intent.action.VIEW"  />
+				<action  android:name = "android.intent.action.EDIT"  />
 				<category  android:name = "android.intent.category.DEFAULT"  />
 				<category  android:name = "android.intent.category.BROWSABLE"  />
 				<data  android:scheme = "content"  />
@@ -85,15 +86,17 @@
 			>
 			<intent-filter >
 				<action  android:name = "android.intent.action.VIEW"  />
+				<action  android:name = "android.intent.action.EDIT"  />
 				<category  android:name = "android.intent.category.DEFAULT"  />
 				<category  android:name = "android.intent.category.BROWSABLE"  />
 				<data  android:scheme = "file"  />
-				<data  android:mimeType = "*/*"  />
+				<!--data  android:mimeType = "*/*"  /-->
 				<data  android:host = "*"  />
 				<data  android:pathPattern = ".*\\.lua"  />
 			</intent-filter >
 			<intent-filter >
 				<action  android:name = "android.intent.action.VIEW"  />
+				<action  android:name = "android.intent.action.EDIT"  />
 				<category  android:name = "android.intent.category.DEFAULT"  />
 				<category  android:name = "android.intent.category.BROWSABLE"  />
 				<data  android:scheme = "content"  />
