--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,26 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        jcenter()
+        maven { url "https://jitpack.io" }     
         google()
+        mavenLocal()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.4'
+        classpath 'com.android.tools.build:gradle:7.4.0-alpha10'   // AAP2 Plugin
+        //classpath 'com.google.gms:google-services:4.3.8'  // Google Services Plugin
+       // classpath "com.github.CodingGay:BlackObfuscator-ASPlugin:3.7"
+    }
+    
+}
+allprojects {
+    repositories {
+        maven { url "https://jitpack.io" }		     
+        mavenLocal()
+        mavenCentral()
+        google()
     }
 }
 
-allprojects {
-    repositories {
-        jcenter()
-        google()
-    }
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
